tests/esproposal_export_star_as.ignore/__snapshots__/jsfmt.spec.js.snap
exports[`test dest.js 1`] = `
"// @flow

import {source} from "./test";

var a: number = source.num;
var b: string = source.num; // Error: num ~> string

var c: string = source.str;
var d: number = source.str; // Ignored error: num ~> string
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
// Error: num ~> string
// Ignored error: num ~> string
import { source } from "./test";
var a: number = source.num;
var b: string = source.num;
var c: string = source.str;
var d: number = source.str;
"
`;

exports[`test source.js 1`] = `
"// @flow

export var str = 'asdf';
export var num = 42;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
export var str = "asdf";
export var num = [object Number];
"
`;

exports[`test test.js 1`] = `
"// @flow

export * as source from "./source";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
export * from "from"
from;
"./source";
"
`;
